--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD WEB</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
@@ -18,7 +20,17 @@
             </div>
         </nav>
     </header>
-
     <!--/Header-->
+
+    <!--Main Site-->
+    <main id="site-main">
+        <div class="container">
+            <a href="/add-user"class="border-shadow">
+                <span class="text-gradient">New User<i class="fa-solid fa-user"></i></span>
+            </a>
+        </div>
+    </main>
+    <!--/Main Site-->
+
 </body>
 </html>    
