--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
             <!--form handling-->
             <form action="/"method="POST">
                 <table class = "table">
-                    <thend class="thead-dark">
+                    <thead class="thead-dark">
                         <tr>
                             <th>ID</th>
                             <th>Name</th>
@@ -44,7 +44,7 @@
                             <th>Course</th>
                             <th>Action</th>
                         </tr>
-                    </thend>
+                    </thead>
                     <tbody>
                         <tr>
                             <td>1</td>
