--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,38 @@
 <%- include('include/header')%>
 <!--include header-->
 
+    <!--Main Site-->
+    <main id="site-main">
+        <div class="container">
+            <div class="box-nav d-flex justify-between">
+                <a href="/add-user"class="border-shadow">
+                <span class="text-gradient">New User<i class="fa-solid fa-user"></i></span>
+            </a>
+            </div>
+
+            <!--form handling-->
+            <form action="/"method="POST">
+                <table class = "table">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Age</th>
+                            <th>Course</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        
+                    </tbody>
+                </table>
+            </form>
+            
+        </div>
+    </main>
+    <!--/Main Site-->
+
 <!--include footer-->
 <%- include('include/footer')%>
 <!--include footer-->
