--- a/views/include/show.ejs
+++ b/views/include/show.ejs
@@ -4,8 +4,9 @@
     <td>example@gmail.com</td>
     <td>20</td>
     <td>Web Development</td>
+    <td>Action</td>
     <td>
-        <a href="#" class="btn border-shadow update">
+        <a href="/update-user" class="btn border-shadow update">
             <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
         </a>
         <a class="btn border-shadow delete">
