--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,11 +22,11 @@
                             <th>Email</th>
                             <th>Age</th>
                             <th>Course</th>
-                            <th>Action</th>
+                            <th>Status Action</th>
                         </tr>
                     </thead>
                     <tbody>
-                        
+                        <%- include('include/show')%>
                     </tbody>
                 </table>
             </form>
