--- a/views/index.html
+++ b/views/index.html
@@ -42,7 +42,7 @@
                             <th>Email</th>
                             <th>Age</th>
                             <th>Course</th>
-                            <th>Action</th>
+                            <th>Status Action</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -52,6 +52,7 @@
                             <td>example@gmail.com</td>
                             <td>20</td>
                             <td>Web Development</td>
+                            <td>Action</td>
                             <td>
                                 <a href="#" class="btn border-shadow update">
                                     <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
