--- a/views/include/form.ejs
+++ b/views/include/form.ejs
@@ -1,5 +1,5 @@
             <!--form handling-->
-            <form method="POST" id="add_user">
+            <form action="/api/users" method="POST" id="add_user">
                 <div class="new_user">
                  <div class="form-group">
                      <label for="name"class="text-light">Name</label>
@@ -7,27 +7,27 @@
                      <input type="text" name="name" value="" placeholder="Manindra">
                  </div>
                  <div class="form-group">
-                     <label for="Email"class="text-light">Email</label>
+                     <label for="email"class="text-light">Email</label>
                      <input type="text" name="email" value="" placeholder="example@gmail.com">
                  </div>
                  <div class="form-group">
-                     <label for="Age"class="text-light">Age</label>
-                     <input type="text" name="Age" value="" placeholder="20">
+                     <label for="age"class="text-light">Age</label>
+                     <input type="text" name="age" value="" placeholder="20">
                  </div>
                  <div class="form-group">
-                     <label for="Course"class="text-light">Course</label>
+                     <label for="course"class="text-light">Course</label>
                      <div class="radio inline">
-                         <input type="radio" id="radio-2" name="Course" value="Web Development">
+                         <input type="radio" id="radio-2" name="course" value="Web Development">
                          <label for="radio-2" class="radio-label">Web Development</label>
                      </div>
                      <div class="radio inline">
-                         <input type="radio" id="radio-3" name="Course" value="Machine learning">
+                         <input type="radio" id="radio-3" name="course" value="Machine learning">
                          <label for="radio-3" class="radio-label">Machine learning</label>
                      </div>
                  </div>
  
                  <div class="form-group">
-                     <label for="Course"class="text-light">Status</label>
+                     <label for="course"class="text-light">Status</label>
                      <div class="radio inline">
                          <input type="radio" id="radio-4" name="status" value="Active">
                          <label for="radio-4" class="radio-label">Active</label>
