--- a/views/include/show.ejs
+++ b/views/include/show.ejs
@@ -1,16 +1,18 @@
+<% for(var i = 0; i < users.length; i++) { %>
 <tr>
-    <td>1</td>
-    <td>Username</td>
-    <td>example@gmail.com</td>
-    <td>20</td>
-    <td>Web Development</td>
-    <td>Action</td>
+    <td><%= i + 1 %></td>
+    <td><%= users[i].name %></td>
+    <td><%= users[i].email %></td>
+    <td><%= users[i].age %></td>
+    <td><%= users[i].course %></td>
+    <td><%= users[i].status %></td>
     <td>
-        <a href="/update-user" class="btn border-shadow update">
+        <a href="/update-user?id=<%= users[i]._id%>" class="btn border-shadow update">
             <span class="text-gradient"><i class="fas fa-pencil-alt"></i></span>
         </a>
-        <a class="btn border-shadow delete">
+        <a class="btn border-shadow delete" data-id=<%= users[i]._id%> >
             <span class="text-gradient"><i class="fas fa-times"></i></span>
         </a>
     </td>
 </tr>
+<% } %>
